--- a/package.json
+++ b/package.json
@@ -9,17 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@kirklin/reset-css": "^0.0.3",
+    "@mantine/core": "^6.0.10",
+    "@mantine/hooks": "^6.0.10",
+    "@mantine/next": "^6.0.10",
+    "@types/bytes": "^3.1.1",
     "@types/node": "20.1.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bytes": "^3.1.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "form-data": "^4.0.0",
+    "formidable-serverless": "^1.1.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
+    "sass": "^1.62.1",
+    "ssh2-sftp-client": "^9.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/ssh2-sftp-client": "^9.0.0"
   }
 }
