--- a/package.json
+++ b/package.json
@@ -9,23 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@edgestore/react": "^0.1.4",
+		"@edgestore/server": "^0.1.4",
 		"@emotion/react": "^11.11.1",
 		"@emotion/server": "^11.11.0",
 		"@kirklin/reset-css": "^0.0.3",
 		"@mantine/core": "^7.2.2",
 		"@mantine/hooks": "^7.2.2",
 		"@mantine/next": "^6.0.21",
-		"@types/bytes": "^3.1.4",
-		"@types/node": "20.9.2",
-		"@types/react": "18.2.37",
-		"@types/react-dom": "18.2.15",
 		"autoprefixer": "10.4.16",
 		"axios": "^1.6.2",
 		"bytes": "^3.1.2",
 		"eslint": "8.54.0",
 		"eslint-config-next": "14.0.3",
-		"form-data": "^4.0.0",
-		"formidable-serverless": "^1.1.1",
 		"next": "14.0.3",
 		"postcss": "8.4.31",
 		"react": "18.2.0",
@@ -33,11 +29,14 @@
 		"react-dropzone": "^14.2.3",
 		"react-icons": "^4.12.0",
 		"sass": "^1.69.5",
-		"ssh2-sftp-client": "^9.1.0",
 		"tailwindcss": "3.3.5",
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@types/bytes": "^3.1.4",
+		"@types/node": "20.9.2",
+		"@types/react": "18.2.37",
+		"@types/react-dom": "18.2.15",
 		"@types/ssh2-sftp-client": "^9.0.3"
 	}
 }
